@@ -1,2 +1,3 @@
 __NEXT__
 new: #141 - Finished implementation of Helm SDK API (`add` and `remove` methods)
+BREAKING: Public class `IndexByDirectory` was removed
